--- a/login.html
+++ b/login.html
@@ -35,7 +35,8 @@
               id="numInput"
               class="inputDetail"
               type="number"
-              placeholder="Student Number"
+              placeholder="Student Number or CvSU Email"
+              multiple
               required
             />
             <br />
@@ -51,9 +52,7 @@
             <button class="submitBtn" id="loginBtn">Login</button>
           </form>
 
-          <button id="resetBtn" class="passReset">
-            Help | Forgot password?
-          </button>
+          <button class="passReset" id="resetBtn">Reset Password?</button>
         </div>
 
         <div class="resetContainer" id="resetDiv">
@@ -77,5 +76,6 @@
     </footer>
 
     <script src="login.js"></script>
+    <script src="darkmode.js"></script>
   </body>
 </html>
