--- a/login/login.html
+++ b/login/login.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CvSU Student Portal</title>
 
-    <link rel="icon" href="images/cvsu-logo 1.svg" />
+    <link rel="icon" href="../images/cvsu-logo 1.svg" />
     <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../fonts.css" />
   </head>
 
   <body>
@@ -14,7 +15,7 @@
 
     <header>
       <div class="cvsuLogo">
-        <img src="images/cvsu-logo 1.svg" />
+        <img src="../images/cvsu-logo 1.svg" />
 
         <div class="logoText">
           <h1 id="title">CvSU Student Portal</h1>
@@ -23,8 +24,8 @@
       </div>
 
       <button class="themeBtn" id="theme-switch">
-        <img class="themeIcon" src="images/icons/light-mode-icon.svg" />
-        <img class="themeIcon" src="images/icons/dark-mode-icon.svg" />
+        <img class="themeIcon" src="../images/icons/light-mode-icon.svg" />
+        <img class="themeIcon" src="../images/icons/dark-mode-icon.svg" />
       </button>
     </header>
 
@@ -56,7 +57,7 @@
                 required
               />
 
-              <img class="passToggle" src="images/icons/eye-icon-on.svg" />
+              <img class="passToggle" src="../images/icons/eye-icon-on.svg" />
             </div>
             <br />
 
@@ -89,6 +90,6 @@
     </footer>
 
     <script src="login.js"></script>
-    <script src="darkmode.js"></script>
+    <script src="../darkmode.js"></script>
   </body>
 </html>
